Connection refactorized. Now can use functions static

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "LibreNMS connection package",
     "authors": [
         {
-            "name": "alex",
+            "name": "axsor",
             "email": "alexsorribes@e-ports.eu"
         }
     ],
