Composer license and LibreNMS TODO

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
                 "LibreNMS": "Axsor\\LaravelLibreNMS\\LibreNMSFacade"
             }
         }
-    }
+    },
+    "license": [
+        "GPL-3.0-or-later"
+    ]
 }
